--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 <p>+91 98416 26839</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5731.342727674245!2d80.09786730560796!3d12.99852439890827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5261f62a51aee1%3A0xb3b523ea5e0a4edb!2sManancherry%20bus%20stop!5e0!3m2!1sen!2sus!4v1707082169804!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5731.342727674245!2d80.09786730560796!3d12.99852439890827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5261f62a51aee1%3A0xb3b523ea5e0a4edb!2sManancherry%20bus%20stop!5e0!3m2!1sen!2sus!4v1707082169804!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
           </div>
